--- a/docs/tikz/arch-three-standby-one-async.tex
+++ b/docs/tikz/arch-three-standby-one-async.tex
@@ -9,16 +9,16 @@
 
 \begin{tikzpicture}[>=stealth',auto,rounded corners]
 
-  \tikzstyle{app}=[circle,thick,draw=blue!75,fill=white]
-  
+  \tikzstyle{app}=[circle,thick,draw=blue!75,fill=white,line width=0.25em]
+
   \tikzstyle{primary}=[rectangle split,rectangle split parts=3,
     text=white,draw=white,fill=blue!75,
     minimum height=3cm,minimum width=4cm]
-  
+
   \tikzstyle{standby}=[rectangle split,rectangle split parts=3,
     draw=white,fill=blue!35,text=white,
     minimum height=1.75cm,minimum width=3cm]
-  
+
   \tikzstyle{async}=[rectangle split,rectangle split parts=3,
     draw=white,fill=violet!35,text=white,
     minimum height=1.75cm,minimum width=3cm]
@@ -27,7 +27,7 @@
     minimum height=1.5cm,minimum width=3cm]
 
   %% \draw [help lines] (-10,0) grid (10,20);
-  
+
   \node  (a)   at (0,17)   [primary]
          {Node A
            \nodepart{second}
@@ -35,7 +35,7 @@
            \nodepart{third}
            \texttt{number\_sync\_standby = 1}
          };
-  
+
   \node  (b)   at (-7,12)  [standby,text width=5.5cm,align=center]
          {Node B
            \nodepart{second}
@@ -44,7 +44,7 @@
            \texttt{replication quorum = true} \\
            \texttt{candidate priority = 50}
          };
-  
+
   \node  (c)   at (0,12)   [async,text width=5.5cm,align=center]
          {Node C
            \nodepart{second}
@@ -53,7 +53,7 @@
            \texttt{replication quorum = false} \\
            \texttt{candidate priority = 0}
          };
-  
+
   \node  (d)   at (7,12)   [standby,text width=5.5cm,align=center]
          {Node D
            \nodepart{second}
@@ -62,15 +62,15 @@
            \texttt{replication quorum = true} \\
            \texttt{candidate priority = 50}
          };
-  
+
   \node  (app) at (-6,18)  [app]        {Application};
   \node  (m)   at (6,18)   [monitor]    {Monitor};
 
   \tikzstyle{sql}=[->,color=blue!75,line width=0.15em]
-  \tikzstyle{sqlf}=[->,color=blue!15,line width=0.15em,loosely dashed]
+  \tikzstyle{sqlf}=[->,color=blue!35,line width=0.15em,loosely dashed]
   \tikzstyle{sr}=[>->,line width=0.15em]
-  \tikzstyle{hc}=[->,color=green!20,line width=0.15em,dashed]
-  
+  \tikzstyle{hc}=[<->,color=green!75,line width=0.15em,dotted]
+
   \path (app) edge [sql,out=0,in=180]  node[below,near start] {SQL} (a)
               edge [sqlf,out=-90,in=135]  (b.north west)
               edge [sqlf,out=-90,in=135]  (c.north west)
